--- a/hack_4/style/style.css
+++ b/hack_4/style/style.css
@@ -6,7 +6,6 @@ body {
 .linea_sup {
     width: 5vw;
     height: 1vh;
-    /*border: 2px;*/
     border-radius: 10%;
     background-color: black;
     text-align: center;
@@ -14,24 +13,50 @@ body {
     margin: 2vh auto;
 }
 
-h1, h2, h3 {
-    font: ruda;
+.titulo_01 {
     text-align: center;
+    font-family:'Ruda';
     font-weight: bold;
+    font-size: 1em;
+    margin: 0;
+    letter-spacing: 0.1em;
 }
 
-h1 {
+h1, h2 {  
+    font-family:'Ruda';
+    width: 100vw;   
+    text-align: center;
+    display: inline-block;
+    font-weight: 900;
+    margin: 0;
+}
+
+h1 {        
+    font-size: 3.5em;
     color: #B88940;
 }
 
-.linea_01 {
+.linea_01, .linea_02 {
+    width: 100vw;   
     text-align: center;
-    font: catamaran;
+    display: inline-block;
+    font-family: 'Catamaran';
+    font-weight: 700;
+    margin: 0;
+}
+
+.linea_01 {
+    letter-spacing: 0.15em;
+    margin-top: 1.5vh;
+}
+
+.linea_02 {
+    font-size: 0.8em;
 }
 
 .container_general {
     width: 100vw;
-    height: 40vh;
+    height: 20vh;
     text-align: center;
     display: flex;
     flex-wrap: wrap;
@@ -41,9 +66,10 @@ h1 {
     margin-top: 15vh;
     position: relative;
     z-index: 0;
+    left: 2.5vw;
 }
 
-.linea_02 {
+.franjas {
     width: 95vw;
     height: 5vh;
     background-color: #FFBD59;
@@ -52,19 +78,135 @@ h1 {
 }
 
 .container_imagenes {
-    width: 80vw;
+    width: 100vw;
     display: flex;
     flex-wrap: wrap;
     position: relative;
     z-index: 1;
-    top: -35vh;
-    left: 10vw;
+    top: -32vh;
+    left: 27vw;
    
 }
 
 .img_01 {
-    width: 20vw;
-    margin: 2vw;
+    width: 15vw;
+    margin: 0.5vw;
+    margin-top: 0;
+    margin-bottom: 0;
+}
 
+.precios {
+    font-family: 'Catamaran';
+    font-weight: 700;
+    text-align: center;
+    margin: 0;
+}
 
+.container_informacion_bajo {
+    width: 100vw;
+    position: relative;
+    text-align: center;
+    top: -25vh;
+    /*margin: 1vh auto;*/
+}
+
+.titulo_02 {
+    width: 100vw;   
+    text-align: center;
+    display: inline-block;
+    font-family: "Open Sans";
+    font-weight: 900;
+    color:#B88940;
+    margin: 0;
+    letter-spacing: 0.1em;
+}
+
+@media (width <= 1300px){
+    .img_01 {
+        width: 17vw; 
+    }
+
+    .container_imagenes {
+        left: 23vw;
+    }
+}
+
+@media (width <= 1200px){
+    .img_01 {
+        width: 19vw; 
+    }
+
+    .container_imagenes {
+        left: 19vw;
+    } 
+}
+
+@media (width <= 1100px){
+    .img_01 {
+        width: 20vw; 
+    }
+
+    .container_imagenes {
+        left: 17vw;
+    } 
+}
+
+@media (width <= 1000px){
+    .img_01 {
+        width: 21vw; 
+    }
+
+    .container_imagenes {
+        left: 15vw;
+    } 
+}
+
+@media (width <= 900px){
+    .img_01 {
+        width: 26vw; 
+    }
+
+    .container_imagenes {
+        left: 10vw;
+    } 
+}
+
+@media (width <= 800px){
+    .img_01 {
+        width: 27vw; 
+    }
+
+    .container_imagenes {
+        left: 8vw;
+    } 
+}
+
+@media (width <= 700px){
+    .img_01 {
+        width: 29vw; 
+    }
+
+    .container_imagenes {
+        left: 5vw;
+    } 
+}
+
+@media (width <= 600px){
+    .img_01 {
+        width: 30vw; 
+    }
+
+    .container_imagenes {
+        left: 4vw;
+    } 
+}
+
+@media (width <= 500px){
+    .img_01 {
+        width: 31vw; 
+    }
+
+    .container_imagenes {
+        left: 3vw;
+    } 
 }
