--- a/hack_4/style/style.css
+++ b/hack_4/style/style.css
@@ -63,34 +63,31 @@ h1 {
 }
 
 .container_lineas {
-    margin-top: 15vh;
+    margin: 15vh auto;
     position: relative;
     z-index: 0;
-    left: 2.5vw;
 }
 
 .franjas {
     width: 95vw;
-    height: 5vh;
+    height: 30px;
     background-color: #FFBD59;
-    margin: 2vh auto;
-    
+    margin: 2vh auto;    
 }
 
 .container_imagenes {
-    width: 100vw;
     display: flex;
     flex-wrap: wrap;
     position: relative;
     z-index: 1;
-    top: -32vh;
-    left: 27vw;
-   
+    margin-left: auto;
+    margin-right: auto;    
+    top: -44vh;
 }
 
 .img_01 {
-    width: 15vw;
-    margin: 0.5vw;
+    width: 200px;
+    margin: 1vw;
     margin-top: 0;
     margin-bottom: 0;
 }
@@ -106,8 +103,7 @@ h1 {
     width: 100vw;
     position: relative;
     text-align: center;
-    top: -25vh;
-    /*margin: 1vh auto;*/
+    top: -37vh;
 }
 
 .titulo_02 {
@@ -119,94 +115,4 @@ h1 {
     color:#B88940;
     margin: 0;
     letter-spacing: 0.1em;
-}
-
-@media (width <= 1300px){
-    .img_01 {
-        width: 17vw; 
-    }
-
-    .container_imagenes {
-        left: 23vw;
-    }
-}
-
-@media (width <= 1200px){
-    .img_01 {
-        width: 19vw; 
-    }
-
-    .container_imagenes {
-        left: 19vw;
-    } 
-}
-
-@media (width <= 1100px){
-    .img_01 {
-        width: 20vw; 
-    }
-
-    .container_imagenes {
-        left: 17vw;
-    } 
-}
-
-@media (width <= 1000px){
-    .img_01 {
-        width: 21vw; 
-    }
-
-    .container_imagenes {
-        left: 15vw;
-    } 
-}
-
-@media (width <= 900px){
-    .img_01 {
-        width: 26vw; 
-    }
-
-    .container_imagenes {
-        left: 10vw;
-    } 
-}
-
-@media (width <= 800px){
-    .img_01 {
-        width: 27vw; 
-    }
-
-    .container_imagenes {
-        left: 8vw;
-    } 
-}
-
-@media (width <= 700px){
-    .img_01 {
-        width: 29vw; 
-    }
-
-    .container_imagenes {
-        left: 5vw;
-    } 
-}
-
-@media (width <= 600px){
-    .img_01 {
-        width: 30vw; 
-    }
-
-    .container_imagenes {
-        left: 4vw;
-    } 
-}
-
-@media (width <= 500px){
-    .img_01 {
-        width: 31vw; 
-    }
-
-    .container_imagenes {
-        left: 3vw;
-    } 
 }
