--- a/hack_5/style/style.css
+++ b/hack_5/style/style.css
@@ -1,7 +1,8 @@
-body {
+* {
     margin: 0;
     padding: 0;
-    font-style: 'Arimo';
+    box-sizing: border-box;
+    font-family: 'Arimo';
 }
 
 .cont-header {
@@ -27,19 +28,19 @@ body {
 }
 
 .linea-header_01 {
-    font-size: 1.7em;
+    font-size: 1.8em;
     top: 0.1vh;
     left: 50px;
 }
 
 .linea-header_02 {
-    font-size: 0.8em;
+    font-size: 0.9em;
     top: 1.5vh;
-    left: 60vw;
+    left: 70vw;
 }
 
 .sec_01 {
-    /*position: relative;*/
+    margin: 0 auto;
 }
 
 .contenedor_img {
@@ -50,8 +51,6 @@ body {
 .img_01 {
     width: 98vw;
     position: relative;
-    /*top: -55vh;
-    top: -450px;*/
     z-index: 0;
 }
 
@@ -63,15 +62,14 @@ body {
     z-index: 1;
     color: #EEEEEE;
     background-color: #00BF63;
+    font-style: 'Arimo';  
 }
 
 .contenedor_titulo_01 {
-    /*width: 17vw;*/
     width: 200px;
 }
 
 .contenedor_titulo_02 {
-    /*width: 30vw;*/
     width: 400px;
     margin-top: 2px;
 }
@@ -90,7 +88,7 @@ body {
     left: 20px;
     z-index: 1;
     color: #EEEEEE;
-    background-color: black;
+    background-color: black; 
 }
 
 .contenedor_titulo_03 {
@@ -113,9 +111,16 @@ body {
 
 .sec_02 {
     margin: 0 auto;
+    position: relative;
+    top: -100px;
 }
 
-.contenedor_img_02, .contenedor_titulo_05 {
+.contenedor_titulo_05 {
+    width: 73vw;
+    margin: 0 auto;
+}
+
+.contenedor_img_02 {
     width: 80vw;
     margin: 0 auto;
 }
@@ -123,6 +128,7 @@ body {
 .contenedor_img_02 {
     display: flex;
     flex-wrap: wrap;
+    margin-top: 20px;
 }
 
 .soluciones_01 {
@@ -135,6 +141,43 @@ body {
     height: 30vh;
     margin-left: auto;
     margin-right: auto;
+}
+
+.espacio_final {
+    width: 96vw;
+    height: 10vh;
+    position: relative;
+    bottom: 15px;
+    background-color: #00BF63;
+    color: #EEEEEE;
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.cont_esp_01 {
+    width: 32vw;
+    text-align: center;
+    display: inline-block;
+    margin-top: 25px;
+}
+
+.linea_section1_03, 
+.linea_section1_04,
+.linea_section1_05 {
+    margin-top: 10px;
+}
+
+.linea_section1_03 {
+    font-size: 1.2em;
+}
+
+.linea_section1_04 {
+    font-size: 1em;
+}
+
+.linea_section1_05 {
+    font-size: 0.7em;    
 }
 
 
@@ -158,6 +201,12 @@ body {
     .contenedor_titulo_04 {
         top: -300px;
     }
+
+    .linea_final_01 {
+        font-size: 0.8em;
+    }
+
+
 }
 
 @media (width <= 750px) {
@@ -168,9 +217,17 @@ body {
     .contenedor_titulo_04 {
         top: -250px;
     }
+
+    .img_02 {
+        width: 180px;
+    }
+
+    .linea_final_01 {
+        font-size: 0.7em;
+    }
 }
 
-@media (width <= 600px) {
+@media (width <= 670px) {
 
     .contenedor_titulo_01,
     .contenedor_titulo_02,
@@ -205,7 +262,24 @@ body {
 
     .contenedor_titulo_04 {
         width: 190px;
+    }
 
+    .img_02 {
+        width: 150px;
+    }
+
+    .linea_final_01 {
+        font-size: 0.8em;
+    }
+}
+
+@media (width <= 580px) {
+    .img_02 {
+        width: 120px;
+    }
+
+    .linea_final_01 {
+        font-size: 0.7em;
     }
 }
 
@@ -228,6 +302,14 @@ body {
 
     .contenedor_titulo_01, .contenedor_titulo_02 {
         height: 4vh;
+    }
+
+    .img_02 {
+        width: 100px;
+    }
+
+    .linea_final_01 {
+        font-size: 0.6em;
     }
 }
 
