--- a/hack_5/style/style.css
+++ b/hack_5/style/style.css
@@ -55,7 +55,7 @@
 }
 
 .contenedor_titulo_01, .contenedor_titulo_02 {
-    height: 5vh;
+    /*height: 5vh;*/
     position: relative;
     top: -400px;
     left: 20px;
@@ -138,14 +138,16 @@
 
 .img_02 {
     width: 200px;
-    height: 30vh;
+    /*height: 30vh;*/
+    height: 200px;
     margin-left: auto;
     margin-right: auto;
 }
 
 .espacio_final {
     width: 96vw;
-    height: 10vh;
+    /*height: 10vh;*/
+    height: 70px;
     position: relative;
     bottom: 15px;
     background-color: #00BF63;
@@ -160,6 +162,20 @@
     text-align: center;
     display: inline-block;
     margin-top: 25px;
+}
+
+.soluciones_img,
+.linea_imagen {
+    display: inline-block;
+}
+
+.linea_imagen {
+    margin-top: auto;
+    margin-bottom: auto;
+    position: relative;
+    top: -10px;
+    font-weight: bold;
+    
 }
 
 .linea_section1_03, 
@@ -225,6 +241,10 @@
     .linea_final_01 {
         font-size: 0.7em;
     }
+
+    .linea_imagen {
+        margin-top: 5px;
+    }
 }
 
 @media (width <= 670px) {
@@ -266,16 +286,18 @@
 
     .img_02 {
         width: 150px;
+        height: 150px;
     }
 
     .linea_final_01 {
         font-size: 0.8em;
-    }
+    }    
 }
 
 @media (width <= 580px) {
     .img_02 {
         width: 120px;
+        height: 120px;
     }
 
     .linea_final_01 {
@@ -306,10 +328,15 @@
 
     .img_02 {
         width: 100px;
+        height: 100px;
     }
 
     .linea_final_01 {
         font-size: 0.6em;
+    }
+
+    .linea_imagen {
+        font-size: 0.8em;
     }
 }
 
