feat: enviando ultimos ajustes al hack-4 de html

--- a/hack_4/style/style.css
+++ b/hack_4/style/style.css
@@ -4,13 +4,13 @@ body {
 }
 
 .linea_sup {
-    width: 5vw;
-    height: 1vh;
+    width: 50px;
+    height: 4px;
     border-radius: 10%;
     background-color: black;
     text-align: center;
     font-weight: 900;
-    margin: 2vh auto;
+    margin: 15px auto;
 }
 
 .titulo_01 {
@@ -47,7 +47,7 @@ h1 {
 
 .linea_01 {
     letter-spacing: 0.15em;
-    margin-top: 1.5vh;
+    margin-top: 10px;
 }
 
 .linea_02 {
@@ -56,14 +56,14 @@ h1 {
 
 .container_general {
     width: 100vw;
-    height: 20vh;
+    height: 200px;
     text-align: center;
     display: flex;
     flex-wrap: wrap;
 }
 
 .container_lineas {
-    margin: 15vh auto;
+    margin: 125px auto;
     position: relative;
     z-index: 0;
 }
@@ -72,7 +72,7 @@ h1 {
     width: 95vw;
     height: 30px;
     background-color: #FFBD59;
-    margin: 2vh auto;    
+    margin: 15px auto;    
 }
 
 .container_imagenes {
@@ -82,12 +82,12 @@ h1 {
     z-index: 1;
     margin-left: auto;
     margin-right: auto;    
-    top: -44vh;
+    top: -340px;
 }
 
 .img_01 {
     width: 200px;
-    margin: 1vw;
+    margin: 5px;
     margin-top: 0;
     margin-bottom: 0;
 }
@@ -103,7 +103,7 @@ h1 {
     width: 100vw;
     position: relative;
     text-align: center;
-    top: -37vh;
+    top: -270px;
 }
 
 .titulo_02 {
@@ -115,4 +115,52 @@ h1 {
     color:#B88940;
     margin: 0;
     letter-spacing: 0.1em;
+}
+
+@media (width <= 680px) {
+    .img_01 {
+        width: 180px;
+        margin-top: 10px;
+    }
+
+    .franjas {
+        width: 98vw; 
+    }
+
+
+}
+
+@media (width <= 580px) {
+    .img_01 {
+        width: 150px;
+        margin-top: 20px;
+    }
+
+    .franjas {
+        height: 30px;   
+    }
+
+}
+
+@media (width <= 500px) {
+    .img_01 {
+        width: 130px;
+        margin-top: 45px;
+    }
+
+    .franjas {
+        height: 25px;   
+    }
+}
+
+@media (width <= 440px) {
+    .img_01 {
+        width: 110px;
+        margin-top: 75px;
+    }
+
+    .franjas {
+        height: 18px;   
+    }
+
 }
